[tool.poetry]
name = "algos"
version = "0.1.0"
description = ""
authors = ["zachvalenta <zjv5002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^5.3.4"
coverage = "^5.0.3"
flake8 = "^3.7.9"
bpython = "^0.18"
black = "^19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
