[tool.poetry]
name = "algos"
version = "0.1.0"
description = ""
authors = ["zachvalenta <zjv5002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.1.1"
coverage = "^6.3.2"
bpython = "^0.22.1"
pre-commit = "^2.17.0"
pdbpp = "^0.10.3"
ruff = "^0.4.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
